# SenseOS

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-artifact.yml
src/: code.py  senseos.c
src/firmware/: __init__.py
src/firmware/synapsepod_crystal/: __init__.py
src/senseos/: __init__.py
src/senseos/acpi/: __init__.py
src/senseos/display/: __init__.py
src/senseos/display/elements/: __init__.py
src/senseos/display/font/: __init__.py
src/senseos/display/screen/: __init__.py
src/senseos/display/screen/bootscreen/: __init__.py
src/senseos/display/screen/mainscreen/: __init__.py
src/senseos/display/screen/wifisetupscreen/: __init__.py
src/senseos/hardware/: __init__.py
src/senseos/hardware/button/: __init__.py  pushbutton.py
src/senseos/hardware/display/: __init__.py  ili9341.py
src/senseos/hardware/keypad/: __init__.py  matrix_button_4x4.py
src/senseos/hardware/pin/: __init__.py  digital.py
src/senseos/memory/: __init__.py
src/senseos/synapselink/: __init__.py
