[tool.poetry]
name = "senseos"
version = "0.1.0"
description = ""
authors = ["Miguel Lopes <miguellopes2004.ml@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
circuitpython-stubs = "^8.1.0"
adafruit-circuitpython-display-button = "^1.6.9"
adafruit-circuitpython-display-notification = "^0.9.15"
adafruit-circuitpython-display-shapes = "^2.6.2"
adafruit-circuitpython-display-text = "^2.28.3"
adafruit-circuitpython-ili9341 = "^1.3.10"
adafruit-circuitpython-progressbar = "^2.3.11"
adafruit-circuitpython-minimqtt = "^7.3.2"
circuitpython-displayio-listselect = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

